--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@timetoknow/pseudoloc",
-  "version": "1.2.0",
+  "name": "pseudoloc",
+  "version": "1.2.1",
   "description": "Pseudoloc (psuedolocalization) for strings",
   "keywords": [
     "localization",
