--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pseudoloc",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Pseudoloc (psuedolocalization) for strings",
   "keywords": [
     "localization",
@@ -21,15 +21,15 @@
     }
   },
   "dependencies": {
-    "commander": "*"
+    "commander": "^2.20.0"
   },
   "devDependencies": {
-    "smash": "~0.0.8",
+    "benchmark": "*",
+    "jslint": "*",
     "mocha": "*",
     "should": ">=0.6.3",
-    "jslint": "*",
-    "uglify-js": "*",
-    "benchmark": "*"
+    "smash": "~0.0.8",
+    "uglify-js": "*"
   },
   "license": "MIT",
   "scripts": {
